--- a/pom.xml
+++ b/pom.xml
@@ -215,7 +215,7 @@
 		<slick.webjars.version>1.3.13</slick.webjars.version>
 		<spring.bom.version>1.2.0.BUILD-SNAPSHOT</spring.bom.version>
 		<spring-data-elasticsearch.version>1.0.0.BUILD-PATCHED-SNAPSHOT</spring-data-elasticsearch.version>
-		<spring-data-releasetrain.version>Fowler-BUILD-SNAPSHOT</spring-data-releasetrain.version>
+		<spring-data-releasetrain.version>Gosling-BUILD-SNAPSHOT</spring-data-releasetrain.version>
         <spring.payment.version>0.5.0.SNAPSHOT</spring.payment.version>
         <spring.test.htmlunit.version>1.0.0.M2</spring.test.htmlunit.version>
 		<supercsv.version>2.2.0</supercsv.version>
