--- a/pom.xml
+++ b/pom.xml
@@ -177,7 +177,7 @@
         <maven.jxr.plugin.version>2.3</maven.jxr.plugin.version>
 		<maven.checkstyle.plugin.version>2.13</maven.checkstyle.plugin.version>
         <maven.compiler.plugin.version>3.1</maven.compiler.plugin.version>
-        <maven.coveralls.plugin.version>3.1.0-SNAPSHOT</maven.coveralls.plugin.version>
+        <maven.coveralls.plugin.version>3.1.0</maven.coveralls.plugin.version>
         <maven.jar.plugin.version>2.4</maven.jar.plugin.version>
         <maven.jacoco.plugin.version>0.7.2.201409121644</maven.jacoco.plugin.version>
         <maven.site.plugin.version>3.4</maven.site.plugin.version>
@@ -282,12 +282,12 @@
             <snapshots><enabled>true</enabled></snapshots>
             <releases><enabled>false</enabled></releases>
         </repository>
-        <repository>
+        <!--repository>
             <id>apache-snapshots</id>
             <url>https://repository.apache.org/content/repositories/snapshots</url>
             <snapshots><enabled>true</enabled></snapshots>
             <releases><enabled>false</enabled></releases>
-        </repository>
+        </repository-->
 		<repository>
 			<id>jboss-3rd-party-releases</id>
 			<name>We need this only for drools-jsr</name>
