--- a/pom.xml
+++ b/pom.xml
@@ -131,7 +131,7 @@
 		<geotools.version>12-beta</geotools.version>
         <google.concurrentlinkedhashmap.version>1.4</google.concurrentlinkedhashmap.version>
         <google.geocoder.version>0.16</google.geocoder.version>
-		<!--hibernate.version>5.0.0-SNAPSHOT</hibernate.version-->
+		<!--hibernate.version>5.0.0.Beta1</hibernate.version-->
         <hazelcast.version>3.4</hazelcast.version>
 		<hikaricp.version>2.3.2</hikaricp.version>
 		<htmlunit.version>2.15</htmlunit.version>
@@ -140,7 +140,6 @@
 		<jadira.usertype.version>3.2.0.GA</jadira.usertype.version>
 		<jawr.version>3.7-SNAPSHOT</jawr.version>
 		<jasypt.version>1.9.2</jasypt.version>
-		<jboss.logging.version>3.2.0.Beta1</jboss.logging.version>
 		<jets3t.version>0.9.0</jets3t.version>
 		<jetty.version>9.1.3.v20140225</jetty.version>
         <jetty.npn.boot.version>1.1.7.v20140316</jetty.npn.boot.version>
@@ -171,7 +170,7 @@
 		<lucene.version>4.1.0</lucene.version>
         <maven.compile.source>1.7</maven.compile.source>
         <maven.compile.target>1.7</maven.compile.target>
-        <maven.archetype.plugin.version>2.3-SNAPSHOT</maven.archetype.plugin.version>
+        <maven.archetype.plugin.version>2.3</maven.archetype.plugin.version>
         <maven.war.plugin.version>2.4</maven.war.plugin.version>
         <maven.surefire.plugin.version>2.15</maven.surefire.plugin.version>
         <maven.jxr.plugin.version>2.3</maven.jxr.plugin.version>
@@ -189,7 +188,7 @@
         <maven.project.info.reports.plugin>2.7</maven.project.info.reports.plugin>
         <maven.appassembler.plugin.version>1.8</maven.appassembler.plugin.version>
         <maven.changes.plugin.version>2.9</maven.changes.plugin.version>
-        <maven.findbugs.plugin.version>2.5.5</maven.findbugs.plugin.version>
+        <maven.findbugs.plugin.version>3.0.1</maven.findbugs.plugin.version>
 		<maven.pmd.plugin.version>3.4</maven.pmd.plugin.version>
         <maven.rat.version.plugin>0.10</maven.rat.version.plugin>
         <maven.extraenforcer.version>1.0-beta-2</maven.extraenforcer.version>
@@ -197,7 +196,6 @@
         <maven.tomcat7.plugin>2.2</maven.tomcat7.plugin>
         <maven.build.helper.plugin.version>1.8</maven.build.helper.plugin.version>
         <maven.plexus.plugin.version>1.5.5</maven.plexus.plugin.version>
-        <maven.wagon.plugin.version>1.0-beta-5-SNAPSHOT</maven.wagon.plugin.version>
         <maven.jasmine.plugin.version>1.3.1.5</maven.jasmine.plugin.version>
 		<maven.plugin.api.version>3.2.2</maven.plugin.api.version>
 		<maven.resource.plugin.version>2.7</maven.resource.plugin.version>
@@ -266,43 +264,13 @@
         </repository>
 		<repository>
             <id>spring-milestone</id>
+            <name>Spring milestones (We need this for commons-vfs2 and com.intridea)</name>
             <url>http://repo.spring.io/libs-milestone</url>
             <snapshots><enabled>false</enabled></snapshots>
             <releases><enabled>true</enabled></releases>
         </repository>
-		<repository>
-            <id>spring-release</id>
-            <url>http://repo.spring.io/libs-release</url>
-            <snapshots><enabled>false</enabled></snapshots>
-            <releases><enabled>true</enabled></releases>
-        </repository>
-        <repository>
-            <id>sonatype-snapshot</id>
-            <url>http://oss.sonatype.org/content/repositories/snapshots</url>
-            <snapshots><enabled>true</enabled></snapshots>
-            <releases><enabled>false</enabled></releases>
-        </repository>
-        <!--repository>
-            <id>apache-snapshots</id>
-            <url>https://repository.apache.org/content/repositories/snapshots</url>
-            <snapshots><enabled>true</enabled></snapshots>
-            <releases><enabled>false</enabled></releases>
-        </repository-->
-		<repository>
-			<id>jboss-3rd-party-releases</id>
-			<name>We need this only for drools-jsr</name>
-			<url>https://repository.jboss.org/nexus/content/repositories/thirdparty-releases/</url>
-			<snapshots><enabled>false</enabled></snapshots>
-            <releases><enabled>true</enabled></releases>
-		</repository>
     </repositories>
     <pluginRepositories>
-		<pluginRepository>
-			<id>sonatype-snapshot</id>
-            <url>http://oss.sonatype.org/content/repositories/snapshots</url>
-            <snapshots><enabled>true</enabled></snapshots>
-            <releases><enabled>false</enabled></releases>
-		</pluginRepository>
 		<pluginRepository>
 			<id>nemesis-repository</id>
             <url>http://repository.nemesis.bg/artifactory/ext-snapshot-local</url>
@@ -608,9 +576,9 @@
 								<requireMavenVersion>
                                     <version>3.0.0-alpha-1</version>
                                 </requireMavenVersion>
-								<enforceBytecodeVersion>
+								<!--enforceBytecodeVersion>
 									<maxJdkVersion>${maven.compile.target}</maxJdkVersion>
-								</enforceBytecodeVersion>
+								</enforceBytecodeVersion-->
 								<!--banDuplicateClasses>
                                     <findAllDuplicates>true</findAllDuplicates>
                                     <ignoreClasses>
