--- a/pom.xml
+++ b/pom.xml
@@ -150,6 +150,7 @@
         <jqueryui.webjars.version>1.11.3</jqueryui.webjars.version>
         <jquerymobile.webjars.version>1.4.5</jquerymobile.webjars.version>
         <jquerymobile.spinbox.webjars.version>1.4.4</jquerymobile.spinbox.webjars.version>
+        <jquerymobile.autocomplete.webjars.version>1.5.2</jquerymobile.autocomplete.webjars.version>
         <fontawesome.webjars.version>4.3.0</fontawesome.webjars.version>
         <jquerycycle2.webjars.version>2.1.0</jquerycycle2.webjars.version>
         <jqueryatmosphere.webjars.version>2.2.3</jqueryatmosphere.webjars.version>
