--- a/pom.xml
+++ b/pom.xml
@@ -16,9 +16,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>io.spring.platform</groupId>
-        <artifactId>platform-foundation-bom</artifactId>
-        <version>2.0.0.BUILD-SNAPSHOT</version>
+		<groupId>io.spring.platform</groupId>
+		<artifactId>platform-bom</artifactId>
+        <version>1.1.2.RELEASE</version>
         <relativePath/>
     </parent>
 
@@ -214,7 +214,6 @@
         <selenium.version>2.45.0</selenium.version>
         <smartsprites.version>0.2.10</smartsprites.version>
         <slick.webjars.version>1.3.13</slick.webjars.version>
-        <spring.bom.version>1.2.0.BUILD-SNAPSHOT</spring.bom.version>
         <spring-data-elasticsearch.version>1.0.0.BUILD-PATCHED-SNAPSHOT</spring-data-elasticsearch.version>
         <spring-data-releasetrain.version>Gosling-BUILD-SNAPSHOT</spring-data-releasetrain.version>
         <spring.payment.version>0.5.0.SNAPSHOT</spring.payment.version>
