--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-		<groupId>io.spring.platform</groupId>
-		<artifactId>platform-bom</artifactId>
+        <groupId>io.spring.platform</groupId>
+        <artifactId>platform-bom</artifactId>
         <version>1.1.2.RELEASE</version>
         <relativePath/>
     </parent>
@@ -187,7 +187,7 @@
         <maven.enforcer.plugin.version>1.3.1</maven.enforcer.plugin.version>
         <maven.release.plugin.version>2.5.1</maven.release.plugin.version>
         <maven.plugin.log4j.version>1.0.1</maven.plugin.log4j.version>
-        <maven.plugin.plugin.version>3.2</maven.plugin.plugin.version>
+        <maven.plugin.plugin.version>3.4</maven.plugin.plugin.version>
         <maven.project.info.reports.plugin>2.7</maven.project.info.reports.plugin>
         <maven.appassembler.plugin.version>1.8</maven.appassembler.plugin.version>
         <maven.changes.plugin.version>2.9</maven.changes.plugin.version>
@@ -248,6 +248,17 @@
             <id>official-m2-repo</id>
             <name>Official Maven2 Repository</name>
             <url>http://repo1.maven.org/maven2/</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+        </repository>
+        <repository>
+            <id>clojars.org</id>
+            <name>We need this for the redis embedded</name>
+            <url>http://clojars.org/repo</url>
             <snapshots>
                 <enabled>false</enabled>
             </snapshots>
