--- a/pom.xml
+++ b/pom.xml
@@ -138,6 +138,7 @@
         <infinispan.version>6.0.0.Final</infinispan.version>
         <itextpdf5.version>5.5.2</itextpdf5.version>
         <jadira.usertype.version>3.2.0.GA</jadira.usertype.version>
+        <java.version>1.8</java.version>
         <jawr.version>3.7-SNAPSHOT</jawr.version>
         <jasypt.version>1.9.2</jasypt.version>
         <jets3t.version>0.9.0</jets3t.version>
@@ -170,8 +171,6 @@
         <jsoup.version>1.7.3</jsoup.version>
         <log4j2.version>2.0.2</log4j2.version>
         <lucene.version>4.1.0</lucene.version>
-        <maven.compile.source>1.8</maven.compile.source>
-        <maven.compile.target>1.8</maven.compile.target>
         <maven.archetype.plugin.version>2.3</maven.archetype.plugin.version>
         <maven.war.plugin.version>2.4</maven.war.plugin.version>
         <maven.surefire.plugin.version>2.15</maven.surefire.plugin.version>
@@ -410,8 +409,8 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <configuration>
-                        <source>${maven.compile.source}</source>
-                        <target>${maven.compile.target}</target>
+                        <source>${maven.compiler.source}</source>
+                        <target>${maven.compiler.target}</target>
                         <compilerArgument>-proc:none</compilerArgument>
                         <compilerArgument>-Xlint:unchecked</compilerArgument>
                     </configuration>
@@ -564,7 +563,7 @@
                 <artifactId>maven-pmd-plugin</artifactId>
                 <version>${maven.pmd.plugin.version}</version>
                 <configuration>
-                    <targetJdk>${maven.compile.source}</targetJdk>
+                    <targetJdk>${maven.compiler.source}</targetJdk>
                     <printFailingErrors>true</printFailingErrors>
                     <rulesets>
                         <ruleset>rulesets/maven.xml</ruleset>
@@ -600,7 +599,7 @@
                                     <version>3.0.0-alpha-1</version>
                                 </requireMavenVersion>
                                 <!--enforceBytecodeVersion>
-                                    <maxJdkVersion>${maven.compile.target}</maxJdkVersion>
+                                    <maxJdkVersion>${maven.compiler.target}</maxJdkVersion>
                                 </enforceBytecodeVersion-->
                                 <!--banDuplicateClasses>
                                     <findAllDuplicates>true</findAllDuplicates>
