--- a/pom.xml
+++ b/pom.xml
@@ -125,7 +125,7 @@
         <drools.version>6.2.0.CR4</drools.version>
         <ecj.version>4.4</ecj.version>
         <ehcache.jcache.version>1.0.1</ehcache.jcache.version>
-        <extjs.webjars.version>5.1.0</extjs.webjars.version>
+        <extjs.webjars.version>5.2.0-SNAPSHOT</extjs.webjars.version>
         <fastutil.version>5.0.9</fastutil.version>
         <geb.version>0.9.3</geb.version>
         <geotools.version>12-beta</geotools.version>
