--- a/pom.xml
+++ b/pom.xml
@@ -409,8 +409,8 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <configuration>
-                        <source>${maven.compiler.source}</source>
-                        <target>${maven.compiler.target}</target>
+                        <source>${java.version}</source>
+                        <target>${java.version}</target>
                         <compilerArgument>-proc:none</compilerArgument>
                         <compilerArgument>-Xlint:unchecked</compilerArgument>
                     </configuration>
