--- a/pom.xml
+++ b/pom.xml
@@ -170,7 +170,7 @@
         <jqueryflowplayer.webjars.version>5.4.6</jqueryflowplayer.webjars.version>
         <jsoup.version>1.7.3</jsoup.version>
         <!--lucene.version>4.1.0</lucene.version-->
-        <maven.archetype.plugin.version>2.3</maven.archetype.plugin.version>
+        <maven.archetype.plugin.version>2.3-SNAPSHOT</maven.archetype.plugin.version>
         <maven.war.plugin.version>2.4</maven.war.plugin.version>
         <maven.surefire.plugin.version>2.15</maven.surefire.plugin.version>
         <maven.jxr.plugin.version>2.3</maven.jxr.plugin.version>
@@ -271,6 +271,16 @@
         <pluginRepository>
             <id>nemesis-repository</id>
             <url>http://repository.nemesis.io/artifactory/ext-snapshot-local</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+        </pluginRepository>
+		<pluginRepository>
+            <id>spring-snapshot</id>
+            <url>http://repo.spring.io/libs-snapshot</url>
             <snapshots>
                 <enabled>true</enabled>
             </snapshots>
