--- a/pom.xml
+++ b/pom.xml
@@ -219,6 +219,7 @@
         <stripe.api.version>1.17.0</stripe.api.version>
         <wagon.version>2.8</wagon.version>
         <xml.apis.version>1.4.01</xml.apis.version>
+        <xalan.version>2.7.2</xalan.version>
         <zxing.version>3.2.0</zxing.version>
     </properties>
 
@@ -620,8 +621,11 @@
                 <artifactId>javase</artifactId>
                 <version>${zxing.version}</version>
             </dependency>
-
-
+			<dependency>
+				<groupId>xalan</groupId>
+				<artifactId>xalan</artifactId>
+				<version>${xalan.version}</version>
+			</dependency>
             <dependency>
                 <groupId>com.nemesis.platform</groupId>
                 <artifactId>nemesis-platform-core</artifactId>
