--- a/pom.xml
+++ b/pom.xml
@@ -133,7 +133,7 @@
         <google.concurrentlinkedhashmap.version>1.4.2</google.concurrentlinkedhashmap.version>
         <google.geocoder.version>0.16</google.geocoder.version>
         <gridgain.version>6.6.4</gridgain.version>
-        <!--hibernate.version>4.3.9.Final</hibernate.version-->
+        <hibernate.version>5.0.0.Beta2</hibernate.version>
         <hazelcast.version>3.4.2</hazelcast.version>
         <hikaricp.version>2.3.7</hikaricp.version>
         <!--htmlunit.version>2.15</htmlunit.version-->
@@ -218,6 +218,7 @@
         <supercsv.version>2.3.1</supercsv.version>
         <stripe.api.version>1.17.0</stripe.api.version>
         <wagon.version>2.8</wagon.version>
+        <wuic.version>0.5.2.RC1</wuic.version>
         <xml.apis.version>1.4.01</xml.apis.version>
         <xalan.version>2.7.2</xalan.version>
         <zxing.version>3.2.0</zxing.version>
@@ -606,6 +607,16 @@
                 <artifactId>stripe-java</artifactId>
                 <version>${stripe.api.version}</version>
             </dependency>
+			<dependency>
+				<groupId>com.github.wuic.extensions</groupId>
+				<artifactId>wuic-spring</artifactId>
+				<version>${wuic.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.github.wuic</groupId>
+				<artifactId>wuic-tag</artifactId>
+				<version>${wuic.version}</version>
+			</dependency>
 			<dependency>
 				<groupId>xml-apis</groupId>
 				<artifactId>xml-apis</artifactId>
