--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     <parent>
         <groupId>io.spring.platform</groupId>
         <artifactId>platform-bom</artifactId>
-        <version>2.0.0.BUILD-SNAPSHOT</version>
+        <version>1.1.2.RELEASE</version>
         <relativePath/>
     </parent>
 
@@ -280,7 +280,7 @@
                 <enabled>false</enabled>
             </releases>
         </pluginRepository>
-		<pluginRepository>
+        <pluginRepository>
             <id>spring-snapshot</id>
             <url>http://repo.spring.io/libs-snapshot</url>
             <snapshots>
@@ -329,11 +329,11 @@
                 <artifactId>commons-jcs-jcache</artifactId>
                 <version>${commons.jcs.version}</version>
             </dependency>
-			<dependency>
-				<groupId>com.googlecode.concurrentlinkedhashmap</groupId>
-				<artifactId>concurrentlinkedhashmap-lru</artifactId>
-				<version>${google.concurrentlinkedhashmap.version}</version>
-			</dependency>
+            <dependency>
+                <groupId>com.googlecode.concurrentlinkedhashmap</groupId>
+                <artifactId>concurrentlinkedhashmap-lru</artifactId>
+                <version>${google.concurrentlinkedhashmap.version}</version>
+            </dependency>
 
             <dependency>
                 <groupId>org.drools</groupId>
@@ -342,20 +342,20 @@
                 <version>${drools.version}</version>
                 <scope>import</scope>
             </dependency>
-			<dependency>
-				<groupId>net.sf.ehcache</groupId>
-				<artifactId>ehcache-core</artifactId>
-				<version>${ehcache.version}</version>
+            <dependency>
+                <groupId>net.sf.ehcache</groupId>
+                <artifactId>ehcache-core</artifactId>
+                <version>${ehcache.version}</version>
             </dependency>
-			<dependency>
-				<groupId>net.sf.ehcache</groupId>
-				<artifactId>ehcache-jcache</artifactId>
-				<version>${ehcache.version}</version>
+            <dependency>
+                <groupId>net.sf.ehcache</groupId>
+                <artifactId>ehcache-jcache</artifactId>
+                <version>${ehcache.version}</version>
             </dependency>
-			<dependency>
-				<groupId>org.ehcache</groupId>
-				<artifactId>jcache</artifactId>
-				<version>${ehcache.jcache.version}</version>
+            <dependency>
+                <groupId>org.ehcache</groupId>
+                <artifactId>jcache</artifactId>
+                <version>${ehcache.jcache.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.geotools</groupId>
@@ -597,31 +597,31 @@
                 <artifactId>super-csv-dozer</artifactId>
                 <version>${supercsv.version}</version>
             </dependency>
-			<dependency>
-            <groupId>com.carrotsearch</groupId>
-            <artifactId>smartsprites</artifactId>
-            <version>${smartsprites.version}</version>
+            <dependency>
+                <groupId>com.carrotsearch</groupId>
+                <artifactId>smartsprites</artifactId>
+                <version>${smartsprites.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.stripe</groupId>
                 <artifactId>stripe-java</artifactId>
                 <version>${stripe.api.version}</version>
             </dependency>
-			<dependency>
-				<groupId>com.github.wuic.extensions</groupId>
-				<artifactId>wuic-spring</artifactId>
-				<version>${wuic.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.github.wuic</groupId>
-				<artifactId>wuic-tag</artifactId>
-				<version>${wuic.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>xml-apis</groupId>
-				<artifactId>xml-apis</artifactId>
-				<version>${xml.apis.version}</version>
-			</dependency>
+            <dependency>
+                <groupId>com.github.wuic.extensions</groupId>
+                <artifactId>wuic-spring</artifactId>
+                <version>${wuic.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.github.wuic</groupId>
+                <artifactId>wuic-tag</artifactId>
+                <version>${wuic.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>xml-apis</groupId>
+                <artifactId>xml-apis</artifactId>
+                <version>${xml.apis.version}</version>
+            </dependency>
             <dependency>
                 <groupId>com.google.zxing</groupId>
                 <artifactId>core</artifactId>
@@ -632,11 +632,11 @@
                 <artifactId>javase</artifactId>
                 <version>${zxing.version}</version>
             </dependency>
-			<dependency>
-				<groupId>xalan</groupId>
-				<artifactId>xalan</artifactId>
-				<version>${xalan.version}</version>
-			</dependency>
+            <dependency>
+                <groupId>xalan</groupId>
+                <artifactId>xalan</artifactId>
+                <version>${xalan.version}</version>
+            </dependency>
             <dependency>
                 <groupId>com.nemesis.platform</groupId>
                 <artifactId>nemesis-platform-core</artifactId>
