--- a/pom.xml
+++ b/pom.xml
@@ -127,6 +127,7 @@
         <!--ehcache.version>3.0.0.m1</ehcache.version-->
         <ehcache.jcache.version>1.0.1</ehcache.jcache.version>
         <extjs.webjars.version>5.2.0-SNAPSHOT</extjs.webjars.version>
+        <angular.webjars.version>1.3.15</angular.webjars.version>
         <!--fastutil.version>5.0.9</fastutil.version-->
         <!--geb.version>0.9.3</geb.version-->
         <geotools.version>12-beta</geotools.version>
