--- a/pom.xml
+++ b/pom.xml
@@ -203,6 +203,7 @@
         <selenium.version>2.45.0</selenium.version>
         <smartsprites.version>0.2.10</smartsprites.version>
         <slick.webjars.version>1.3.13</slick.webjars.version>
+        <spring-hateoas.version>0.17.0.RELEASE</spring-hateoas.version>
         <!--spring-social.version>1.1.2.RELEASE</spring-social.version--> <!-- Remove when bom upgrades it -->
         <!--spring-session.version>1.0.1.RELEASE</spring-session.version-->
         <spring-data-releasetrain.version>Gosling-M1</spring-data-releasetrain.version>
