--- a/pom.xml
+++ b/pom.xml
@@ -128,7 +128,7 @@
         <google.geocoder.version>0.16</google.geocoder.version>
         <gridgain.version>6.6.4</gridgain.version>
         <!--hibernate.version>5.0.0.CR1</hibernate.version--> <!-- Upgrade once jackson-datatype-hibernate5 is out and also hazelcast supports hibernate5-->  <!-- Remove once boot updates -->
-        <hazelcast.version>3.4.2</hazelcast.version>
+        <hazelcast.version>3.5</hazelcast.version>
         <hikaricp.version>2.3.7</hikaricp.version>
         <infinispan.version>6.0.2.Final</infinispan.version>
         <itextpdf5.version>5.5.5</itextpdf5.version>
@@ -209,6 +209,7 @@
         <spring-data-releasetrain.version>Gosling-M1</spring-data-releasetrain.version>
         <spring.test.htmlunit.version>1.0.0.RC1</spring.test.htmlunit.version>
         <spring-loaded.version>1.2.3.RELEASE</spring-loaded.version>
+        <spring-restdocs.version>1.0.0.M1</spring-restdocs.version>
         <supercsv.version>2.3.1</supercsv.version>
         <stripe.api.version>1.17.0</stripe.api.version>
         <wagon.version>2.8</wagon.version>
@@ -642,6 +643,11 @@
                 <artifactId>xalan</artifactId>
                 <version>${xalan.version}</version>
             </dependency>
+			<dependency>
+				<groupId>org.springframework.restdocs</groupId>
+				<artifactId>spring-restdocs</artifactId>
+				<version>${spring-restdocs.version}</version> <!-- remove once restdocs is in the platform -->
+			</dependency>
             <dependency>
                 <groupId>com.nemesis.platform</groupId>
                 <artifactId>nemesis-platform-core</artifactId>
