--- a/pom.xml
+++ b/pom.xml
@@ -110,7 +110,7 @@
     </distributionManagement>
 
     <properties>
-        <amazon.aws.sdk.version>1.9.32</amazon.aws.sdk.version>
+        <amazon.aws.sdk.version>1.10.3</amazon.aws.sdk.version>
         <asciidoctor.version>1.5.2</asciidoctor.version>
         <atmosphere.version>2.2.6</atmosphere.version>
         <checkstyle.violation.ignore>RedundantThrows,NewlineAtEndOfFile,ParameterNumber,MethodLength,FileLength</checkstyle.violation.ignore>
@@ -118,7 +118,7 @@
         <codemirror.webjars.version>5.1</codemirror.webjars.version>
         <commons.collections4.version>4.0</commons.collections4.version>
         <commons.vfs2.version>2.1.1660580.1</commons.vfs2.version>
-        <commons.vfs2.s3.version>2.3.0</commons.vfs2.s3.version>
+        <commons.vfs2.s3.version>2.3.1</commons.vfs2.s3.version>
         <commons.jcs.version>2.0-beta-1</commons.jcs.version>
         <drools.version>6.2.0.Final</drools.version>
         <ehcache.jcache.version>1.0.1</ehcache.jcache.version>
@@ -127,7 +127,7 @@
         <google.concurrentlinkedhashmap.version>1.4.2</google.concurrentlinkedhashmap.version>
         <google.geocoder.version>0.16</google.geocoder.version>
         <gridgain.version>6.6.4</gridgain.version>
-        <hibernate.version>5.0.0.CR1</hibernate.version> <!-- Upgrade once jackson-datatype-hibernate5 is out and also hazelcast supports hibernate5-->  <!-- Remove once boot updates -->
+        <hibernate.version>5.0.0.CR2</hibernate.version> <!-- Upgrade once jackson-datatype-hibernate5 is out and also hazelcast supports hibernate5-->  <!-- Remove once boot updates -->
         <hazelcast.version>3.5</hazelcast.version>
         <hikaricp.version>2.3.7</hikaricp.version>
         <infinispan.version>7.2.1.Final</infinispan.version>
@@ -196,10 +196,13 @@
         <nemesis.version>0.6-SNAPSHOT</nemesis.version>
         <opencmis.version>0.13.0</opencmis.version>
         <orika.version>1.4.6-SNAPSHOT</orika.version>
+        <phantomjs.version>1.9.8</phantomjs.version>
+        <phantomjs.maven.plugin.version>0.7</phantomjs.maven.plugin.version>
+        <phantomjs.driver.version>1.2.1</phantomjs.driver.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <recaptcha4j.version>0.0.7</recaptcha4j.version>
-        <reflections.version>0.9.9</reflections.version>
+        <reflections.version>0.9.10</reflections.version>
         <redis.embedded.version>0.6</redis.embedded.version>
         <selenium.version>2.45.0</selenium.version>
         <smartsprites.version>0.2.10</smartsprites.version>
@@ -264,6 +267,14 @@
                 <enabled>true</enabled>
             </releases>
         </repository>
+		<repository>
+			<id>vfs-s3.repository</id>
+			<name>vfs-s3 project repository</name>
+			<url>http://dl.bintray.com/content/abashev/vfs-s3</url> <!-- Needed for vfs-s3 --> 
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</repository>
     </repositories>
     <pluginRepositories>
         <pluginRepository>
@@ -603,6 +614,11 @@
                 <groupId>net.sf.supercsv</groupId>
                 <artifactId>super-csv-dozer</artifactId>
                 <version>${supercsv.version}</version>
+            </dependency>
+			<dependency>
+				<groupId>com.codeborne</groupId>
+				<artifactId>phantomjsdriver</artifactId>
+				<version>${phantomjs.driver.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.carrotsearch</groupId>
