updated log4j2 version

--- a/pom.xml
+++ b/pom.xml
@@ -165,6 +165,8 @@
         <jqueryflowplayer.webjars.version>5.4.6</jqueryflowplayer.webjars.version>
         <jsoup.version>1.7.3</jsoup.version>
         <jetty.version>9.3.0.v20150612</jetty.version>
+        <!-- Remove log4j2.version once spring-platform-bom updates to it. -->
+        <log4j2.version>2.3</log4j2.version>
         <maven.archetype.plugin.version>2.3-SNAPSHOT</maven.archetype.plugin.version>
         <maven.war.plugin.version>2.4</maven.war.plugin.version>
         <maven.surefire.plugin.version>2.18</maven.surefire.plugin.version>
