--- a/pom.xml
+++ b/pom.xml
@@ -217,7 +217,7 @@
         <spring-social.version>1.1.2.RELEASE</spring-social.version>
         <!-- Remove when bom upgrades it -->
         <!--spring-session.version>1.0.1.RELEASE</spring-session.version-->
-        <spring-data-releasetrain.version>Gosling-M1</spring-data-releasetrain.version>
+        <spring-data-releasetrain.version>Gosling-RC1</spring-data-releasetrain.version>
         <spring.test.htmlunit.version>1.0.0.RC1</spring.test.htmlunit.version>
         <spring-loaded.version>1.2.3.RELEASE</spring-loaded.version>
         <spring-restdocs.version>1.0.0.M1</spring-restdocs.version>
